css/theme.scss
/* ... */
.faqs {
  @include breakpoints.up("lg") {
    display: flex;
    gap: var(--gap-items);
  }

  .faqs-column {
    flex: 1;
    margin: 0;

    @include breakpoints.up("xl") {
      &:nth-child(1) {
        padding-left: calc(var(--section-padding) * 2);
      }
      &:nth-child(2) {
        padding-right: calc(var(--section-padding) * 2);
      }
    }
  }

  details {
    margin-bottom: 1rem;

    &::details-content {
      display: block;
      overflow: hidden;
      transition:
        content-visibility 0.3s ease-in-out allow-discrete,
        block-size 0.3s ease-in-out;
      block-size: 0;
    }

    &[open]::details-content {
      block-size: auto;
    }
  }

  summary,
  p {
    padding-right: 26px;
  }

  summary {
    position: relative;
    cursor: pointer;
    list-style: none;
    font-weight: 500;

    &::-webkit-details-marker {
      display: none;
    }

    &::after {
      content: "";
      position: absolute;
      top: 8px;
      right: 0;
      width: 16px;
      height: 16px;
      border-radius: 16px;
      background-color: #e1f1f6;
      background-image: url("data:image/svg+xml,%3Csvg width='6' height='3' viewBox='0 0 6 3' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.078 2.915C0.187 3.024 0.368 3.028 0.482 2.925L3 0.649L5.518 2.925C5.632 3.029 5.813 3.024 5.922 2.915C6.03 2.805 6.025 2.633 5.911 2.529L3.196 0.075C3.142 0.025 3.071 0 3 0C2.93 0 2.858 0.025 2.804 0.075L0.089 2.529C-0.025 2.633 -0.03 2.805 0.078 2.915Z' fill='%23009DD7'/%3E%3C/svg%3E");
      background-repeat: no-repeat;
      background-position: center;
      transition:
        background-color 0.2s ease-in-out,
        transform 0.2s ease-in-out;
      transform: rotate(180deg);
    }

    &:hover::after,
    &:active::after {
      background-color: #c5e3eb;
    }
  }

  details[open] summary::after {
    transform: rotate(0deg);
  }

  p {
    margin: 0 0 var(--gap-items);
  }
}

.slider {
  padding-bottom: var(--gap-items);
}

.slider-nav {
  display: flex;
  flex-direction: row;
  gap: 16px;
  margin: 0;
  a {
    display: block;
    width: 66px;
    height: 66px;
    font-size: 20px;
    font-family:
      system-ui,
      -apple-system,
      BlinkMacSystemFont,
      "Segoe UI",
      Roboto,
      Oxygen,
      Ubuntu,
      Cantarell,
      "Open Sans",
      "Helvetica Neue",
      sans-serif;
    color: #181a1f;
    border-radius: 100%;
    border: 1px solid #babbbc;
    display: flex;
    justify-content: center;
    align-items: center;

    &:hover {
      border-color: #181a1f;
      color: #181a1f;
      background-color: white;
      text-decoration: none;
    }

    &[disabled] {
      color: #babbbc;
    }
  }
}

div.fun-pro-item {
  background: #fafafa;

  & > * {
    padding: 0;
    margin: 0;
  }

  .item-breadcrumbs {
    grid-area: breadcrumbs;
    margin: 0 0 calc(var(--gap-items) / 2);
  }
  .item-reviews-header {
    grid-area: reviews-header;
    p {
      margin: 0 0 var(--gap-items);
    }
  }
  .item-title {
    grid-area: title;
    margin: 0 0 calc(var(--gap-items) / 4);
  }
  .item-subtitle {
    grid-area: subtitle;
    margin: 0 0 var(--gap-items);
  }
  .item-price {
    grid-area: price;
    margin: 0 0 calc(var(--gap-items) / 2);
  }
  .item-specs {
    grid-area: specs;
    margin: 0 0 var(--gap-items);
    dl {
      margin: 0;
    }
  }
  .item-features {
    grid-area: features;
    margin: 0 0 var(--gap-items);
  }
  .item-cart-buttons {
    grid-area: cart-buttons;
    margin: 0 0 var(--gap-items);

    .add-to-cart {
      @include button-red;
      width: 100%;
    }
  }
  .item-gallery {
    grid-area: gallery;
    margin: 0 0 var(--section-padding-half);
  }
  .item-description {
    grid-area: description;
    margin: 0 0 var(--gap-items);
  }
  .item-tabs {
    grid-area: tabs;
    margin: 0 0 var(--section-padding);
  }
  .item-reviews {
    grid-area: reviews;
    margin: 0 0 var(--section-padding);
  }
  .item-faqs {
    grid-area: faqs;
    margin: 0 0 var(--section-padding);
  }

  .inner {
    @include breakpoints.up("md") {
      display: grid;
      gap: 0 64px;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: repeat(13, auto);
      grid-template-areas:
        "breadcrumbs breadcrumbs"
        "gallery     reviews-header"
        "gallery     title"
        "gallery     subtitle"
        "gallery     price"
        "gallery     specs"
        "gallery     features"
        "gallery     description"
        "gallery     cart-buttons"
        "gallery     ."
        "tabs        tabs"
        "reviews     reviews"
        "faqs        faqs";
    }
  }
  #tabs {
    @include card;
    background: white;
    height: 550px;

    ul {
      height: 100%;
      grid-template-rows: 32px 1fr;
      padding: 0;
    }

    .tab {
      width: fit-content;
      align-content: center;
      a {
        border-bottom: 2px solid transparent;
        transition: border-color 0.3s ease-in-out;
      }
      &.active a,
      a:active,
      a:hover {
        border-bottom-color: #009dd7;
        text-decoration: none;
      }
    }
    .body {
      height: calc(100% - 64px);
    }
  }
}

